--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,3 +18,9 @@ input:-webkit-autofill {
 .no-margin {
   margin: 0;
 }
+
+/** navbar icon  */
+.navbar-icon {
+  font-size: 22px;
+  cursor: pointer;
+}
