add user edit tagsview edit breadcrumb edit language select

--- a/src/styles/element-ui.patch.scss
+++ b/src/styles/element-ui.patch.scss
@@ -11,3 +11,18 @@
     transition: 0s width ease-in-out, 0s padding-left ease-in-out, 0s padding-right ease-in-out;
   }
 }
+
+/*--------el-menu----------------*/
+.el-menu {
+  [class^=fa] {
+    vertical-align: middle;
+    margin-right: 5px;
+    width: 24px;
+    text-align: center;
+    font-size: 18px;
+  }
+
+  a {
+    text-decoration: none;
+  }
+}
